--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <li class="extra-icons-item">
               <a class="icon-link" href="#" title="Избранное">
                 <img class="img" src="img/heart.png" width="22" height="22" alt="Избранное">
-
+                <span class="icon-link-badge">15</span>
                 <span class="visually-hidden">Избранное</span>
               </a>
             </li>
@@ -49,7 +49,6 @@
       </header>
 
       <main class="main-index">
-
         <section class="hero">
           <h1 class="visually-hidden">Welcome to the gorgeous Sedona,because the Grand Canyon sucks!</h1>
           <img class="img img-hero" src="img/welcome.svg" width="458" height="352"
@@ -64,94 +63,98 @@
 
         <section class="advantages">
           <h2 class="visually-hidden">Преимущества</h2>
-          <div class="advantages-first">
-            <div class="advantages-item-first">
-              <div class="advantages-item-conteiner">
-              <h3 class="advantages-title-first">Настоящий городок</h3>
-              <hr class="advantages-title-divider" />
-              <p class="advantages-description-first">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
+
+          <div class="advantage advantage--first">
+            <div class="advantage-content">
+              <div class="advantage-conteiner">
+                <h3 class="advantage-title">Настоящий городок</h3>
+                <hr class="advantage-divider" />
+                <p class="advantage-description">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
+              </div>
             </div>
-            </div>
-            <div class="advantages-photo-first">
+            <div class="advantage-photo">
 
             </div>
           </div>
 
           <ul class="advantages-list">
             <li class="advantages-list-item">
-              <div class="advantages-item-conteiner">
-              <h3 class="advantages-title">Небольшая площадь</h3>
-              <hr class="advantages-title-divider" />
-              <p class="advantages-description">Все достопримечательности находятся очень близко</p>
+              <div class="advantage-conteiner">
+                <h3 class="advantage-title">Небольшая площадь</h3>
+                <hr class="advantage-divider" />
+                <p class="advantage-description">Все достопримечательности находятся очень близко</p>
               </div>
             </li>
             <li class="advantages-list-item">
-              <div class="advantages-item-conteiner">
-              <h3 class="advantages-title">Красивая дорога</h3>
-              <hr class="advantages-title-divider" />
-              <p class="advantages-description">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+              <div class="advantage-conteiner">
+                <h3 class="advantage-title">Красивая<br> дорога</h3>
+                <hr class="advantage-divider" />
+                <p class="advantage-description">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
               </div>
             </li>
             <li class="advantages-list-item">
-              <div class="advantages-item-conteiner">
-              <h3 class="advantages-title">Мало туристов</h3>
-              <hr class="advantages-title-divider" />
-              <p class="advantages-description">Большинство едет в Гранд Каньон и толпится там</p>
+              <div class="advantage-conteiner">
+                <h3 class="advantage-title">Мало<br> туристов</h3>
+                <hr class="advantage-divider" />
+                <p class="advantage-description">Большинство едет в Гранд Каньон и толпится там</p>
               </div>
             </li>
           </ul>
 
-          <section class="advantages-last">
-            <div class="advantages-item-last">
-              <div class="advantages-item-conteiner">
-              <h3 class="advantages-title-last">Там есть мост дьявола</h3>
-              <hr class="advantages-title-divider" />
-              <p class="advantages-description-last">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
+          <div class="advantage advantage--last">
+            <div class="advantage-content">
+              <div class="advantage-conteiner">
+                <h3 class="advantage-title">Там есть<br> мост  дьявола</h3>
+                <hr class="advantage-divider" />
+                <p class="advantage-description">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
+              </div>
             </div>
+            <div class="advantage-photo">
             </div>
-            <div class="advantages-photo-last">
-            </div>
-          </section>
+          </div>
         </section>
 
         <section class="service">
-          <h2 class="servise-title">Приезжайте в Седону отдохнуть в комфорте и уюте!</h2>
-          <p class="servise-description">Опытный персонал и качественное обслуживание!</p>
-          <ul class="servise-list">
+          <h2 class="heading">Приезжайте в Седону отдохнуть<br> в комфорте и уюте!</h2>
+          <p class="descriptions">Опытный персонал и качественное обслуживание!</p>
+          <ul class="service-list">
             <li class="service-item">
               <div class="service-item-container">
-              <img class="img img-service" src="img/service-item-card_svg/hause.svg" width="75" height="72" alt="Иконка-домик">
-              <h2 class="servise-list-title">жилье</h2>
-              <p class="servise-list-description">Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
+                <img class="img img-service" src="img/service-item-card_svg/hause.svg" width="75" height="72"
+                  alt="Иконка-домик">
+                <h2 class="service-list-title">жилье</h2>
+                <p class="service-list-description">Рекомендуем пожить<br> в настоящем мотеле,<br> всё как в кино!</p>
               </div>
             </li>
             <li class="service-item">
               <div class="service-item-container">
-              <img class="img img-service" src="img/service-item-card_svg/food.svg" width="74" height="70" alt="Иконка-гамбургер">
-              <h2 class="servise-list-title">еда</h2>
-              <p class="servise-list-description">Всегда заказывайте топовый фирменный бургер, вы не разочаруетесь!
-              </p>
+                <img class="img img-service" src="img/service-item-card_svg/food.svg" width="74" height="70"
+                  alt="Иконка-гамбургер">
+                <h2 class="service-list-title">еда</h2>
+                <p class="service-list-description">Всегда заказывайте<br> топовый фирменный бургер, вы не разочаруетесь!
+                </p>
               </div>
             </li>
             <li class="service-item">
               <div class="service-item-container">
-              <img class="img img-service" src="img/service-item-card_svg/souvenir.svg" width="64" height="76" alt="Иконка-сувенир">
-              <h2 class="servise-list-title">сувениры</h2>
-              <p class="servise-list-description">Не только китайского, но и настоящего местного производства!</p>
+                <img class="img img-service" src="img/service-item-card_svg/souvenir.svg" width="64" height="76"
+                  alt="Иконка-сувенир">
+                <h2 class="service-list-title">сувениры</h2>
+                <p class="service-list-description">Не только китайского,<br> но и настоящего местного производства!</p>
               </div>
             </li>
           </ul>
         </section>
 
         <section class="search">
-          <h3 class="search-title">Заинтересовались?</h3>
-          <p class="search-description">Укажите предполагаемые даты поездки,и мы покажем вам лучшие предложения гостиниц
+          <h3 class="heading">Заинтересовались?</h3>
+          <p class="descriptions">Укажите предполагаемые даты поездки,<br>и мы покажем вам лучшие предложения гостиниц
             в Седоне</p>
-          <a class="search-catalog"  href="catalog.html">ПОИСК ГОСТИНИЦЫ В СЕДОНЕ</a>
+          <a class="search-catalog" href="catalog.html">ПОИСК ГОСТИНИЦЫ В СЕДОНЕ</a>
         </section>
         <section class="subscribe">
-          <h3 class="subscribe-title">Подпишитесь на рассылку</h3>
-          <p class="subscribe-description">Только полезная информация и никакого спама, честное бойскаутское!</p>
+          <h3 class="heading">Подпишитесь на рассылку</h3>
+          <p class="descriptions">Только полезная информация и никакого спама,<br> честное бойскаутское!</p>
           <form class="subscribe-form" action="https://echo.htmlacademy.ru/" method="post">
             <input class="subscribe-input" type="text" name="mail" id="mail-field" placeholder="Ваш e-mail">
             <button class="subscribe-button" type="submit">Подписаться</button>
@@ -164,20 +167,23 @@
         <ul class="footer-social-list">
           <li class="footer-social-item">
             <span class="visually-hidden">Вконтакте</span>
-            <a href="#"><img class="img img-social" src="img/socials_svg/VK.svg" width="24" height="14" alt="ВКонтакте"></a>
+            <a href="#"><img class="img img-social" src="img/socials_svg/VK.svg" width="24" height="14" viewBox="0 0 24 14"
+                alt="ВКонтакте"></a>
           </li>
           <li class="footer-social-item">
             <span class="visually-hidden">Telegram</span>
-            <a href="#"><img class="img img-social" src="img/socials_svg/telegram.svg" width="18" height="15" alt="Telegram"></a>
+            <a href="#"><img class="img img-social" src="img/socials_svg/telegram.svg" width="18" height="15" viewBox="0 0 15 15"
+                alt="Telegram"></a>
           </li>
           <li class="footer-social-item">
             <span class="visually-hidden">YouTube</span>
-            <a href="#"><img class="img img-social" src="img/socials_svg/youtube.svg" width="22" height="17" alt="YouTube"></a>
+            <a href="#"><img class="img img-social" src="img/socials_svg/youtube.svg" width="22" height="17" viewBox="0 0 22 17"
+                alt="YouTube"></a>
           </li>
         </ul>
         <a class="phone" href="tel:+7622620563">+7 (812) 812-12-12</a>
-        <a class="academy" href="https://htmlacademy.ru/"><img class="img img-academy"  src="img/HTML_Academy.png" width="115" height="33"
-            alt="HTML Academy"></a>
+        <a class="academy" href="https://htmlacademy.ru/"><img class="img img-academy" src="img/HTML_Academy.png"
+            width="115" height="33" alt="HTML Academy"></a>
       </footer>
 
     </div>
