Добавляет правки по pixel perfect главной страницы

--- a/index.html
+++ b/index.html
@@ -115,18 +115,16 @@
           <h2 class="heading service-heading">Приезжайте в Седону отдохнуть<br> в комфорте и уюте!</h2>
           <p class="descriptions">Опытный персонал и качественное обслуживание!</p>
           <ul class="service-list">
-            <li class="service-item service-item--housing">
+            <li class="service-item">
               <div class="service-item-container">
-                <img class="img img-service" src="img/service-item-card_svg/hause.svg" width="75" height="72"
-                  alt="Иконка-домик">
+                <div class="img-service img-service-housing" alt="Иконка-домик"></div>
                 <h2 class="service-list-title">жилье</h2>
                 <p class="service-list-description">Рекомендуем пожить<br> в настоящем мотеле,<br> всё как в кино!</p>
               </div>
             </li>
             <li class="service-item service-item--food">
               <div class="service-item-container">
-                <img class="img img-service" src="img/service-item-card_svg/food.svg" width="74" height="70"
-                  alt="Иконка-гамбургер">
+                <div class="img-service img-service-food" alt="Иконка-гамбургер"></div>
                 <h2 class="service-list-title">еда</h2>
                 <p class="service-list-description">Всегда заказывайте<br> топовый фирменный бургер, вы не
                   разочаруетесь!
@@ -135,8 +133,7 @@
             </li>
             <li class="service-item service-item--souvenir">
               <div class="service-item-container">
-                <img class="img img-service" src="img/service-item-card_svg/souvenir.svg" width="64" height="76"
-                  alt="Иконка-сувенир">
+                <div class="img-service img-service-souvenir" alt="Иконка-сувенир"></div>
                 <h2 class="service-list-title">сувениры</h2>
                 <p class="service-list-description">Не только китайского,<br> но и настоящего местного производства!</p>
               </div>
