--- a/catalog.html
+++ b/catalog.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 <html lang="ru">
-
   <head>
-    <meta charset="utf-8">
-    <link rel="stylesheet" href="styles/styles.css">
+    <meta charset="utf-8" >
+    <link rel="stylesheet" href="styles/styles.css" >
+    <link rel="icon" href="favicon.ico">
+    <link rel="icon" type="image/png" href="img/favicon.ico">
     <title>HTML Academy: Седона</title>
   </head>
-
   <body>
     <div class="container">
       <header class="page-header" data-test="header">
         <a class="logo" href="index.html">
-          <img class="img" src="img/logo-Sedona.svg" width="140" height="70" alt="Логотип города Седона.">
+          <img class="img" src="img/logo-Sedona.svg" width="140" height="70" alt="Логотип города Седона." >
         </a>
         <nav class="navigation">
           <ul class="navigation-list">
@@ -28,9 +28,8 @@
         </nav>
         <div class="extra">
           <ul class="extra-icons">
-            <li class="extra-icons-item">
+            <li class="extra-icons-item icon-seach">
               <a class="icon-link" href="#" title="Поиск">
-                <img class="img" src="img/search.png" width="22" height="22" alt="Поиск">
                 <span class="visually-hidden">Поиск</span>
               </a>
             </li>
@@ -42,7 +41,9 @@
               </a>
             </li>
           </ul>
-          <button class="button-link" type="button">Хочу сюда!</button>
+          <button class="button button-brown button-small" type="button">
+            Хочу сюда!
+          </button>
         </div>
       </header>
       <main class="main-inner" data-test="main">
@@ -54,15 +55,12 @@
                 <a class="breadcrumbs-home" title="На главную" href="index.html"></a>
               </div>
               <div class="breadcrumbs-item">
-                <span  class="breadcrumbs-arrow"></span>
-              </div>
-              <div class="breadcrumbs-item">
                 <span class="breadcrumbs-finish">Гостиницы</span>
               </div>
             </div>
           </div>
           <div class="catalog-filter" data-test="filter">
-            <h2 class="visually-hidden">Список гостиниц </h2>
+            <h2 class="visually-hidden">Список гостиниц</h2>
             <form class="catalog-filter-form" action="https://echo.htmlacademy.ru/" method="get">
               <fieldset class="catalog-filter-group">
                 <legend class="catalog-filter-title">Инфраструктура:</legend>
@@ -112,23 +110,30 @@
               </fieldset>
               <fieldset class="catalog-filter-prise">
                 <legend class="catalog-filter-title">Стоимость, ₽:</legend>
-               <div class="prices">
-                <label class="price">
-                  <input class="input-price" type="number" name="min-prise" value="0">
-               <span class="input-price-label">от</span>
-                </label>
-                <label class="price">
-                  <input class="input-price" type="number" name="max-prise" value="9000">
-               <span class="input-price-label">до</span>
-                </label>
-               </div>
+                <div class="prices">
+                  <label class="price">
+                    <input class="input-price" type="number" name="min-prise" value="0">
+                    <span class="input-price-label">от</span>
+                  </label>
+                  <label class="price">
+                    <input class="input-price" type="number" name="max-prise" value="9000">
+                    <span class="input-price-label">до</span>
+                  </label>
+                </div>
+                <div class="range">
+                  <div class="range-fill"></div>
+                  <button type="button" class="range-toggle range-toggle-min"></button>
+                  <button type="button" class="range-toggle range-toggle-max"></button>
+                </div>
               </fieldset>
               <div class="catalog-filter-buttons">
-              <button class="button-apply" type="submit">Применить
-              </button>
-              <button class="button-reset" type="submit">Сбросить
-              </button>
-            </div>
+                <button class="button button-blue button-large" type="submit">
+                  Применить
+                </button>
+                <button class="button button-reset" type="submit">
+                  Сбросить
+                </button>
+              </div>
             </form>
           </div>
         </section>
@@ -143,71 +148,77 @@
             <option value="expensive">Сначала дорогое</option>
           </select>
           <ul class="catalog-sorting-views">
-            <li class="view"><img class="img" src="img/views/View-icon-1.png"></li>
-            <li class="view"><img class="img" src="img/views/View-icon-2.png"></li>
-            <li class="view"><img class="img" src="img/views/View-icon-3.png"></li>
-            </ul>
+            <li class="view view-cards"></li>
+            <li class="view view-full"></li>
+            <li class="view view-list"></li>
+          </ul>
         </section>
         <section class="hotels" data-test="hotels">
           <ul class="hotels-list">
             <li class="hotels-item">
               <img class="hotel-image" src="img/hotels/Amara_Resort_&_Spa.jpg" width="300" height="212" alt="">
               <a class="hotel-title" href="#">
-                <h3 >Amara Resort & Spa</h3>
+                <h3>Amara Resort & Spa</h3>
               </a>
               <span class="hotels-type">Гостиница</span>
               <span class="hotels-price">От 4000 ₽</span>
-              <a class="hotels-button " href="#">Подробнее</a>
-              <button class="favorites-button" type="button">в избранное</button>
-              <span class="stars"> <img class="img" alt="4 звезды из 5" src="img/stars/4-stars.png" ></span>
+              <a class="button button-brown button-small" href="#">Подробнее</a>
+              <button class="button button-blue button-small" type="button">
+                в избранное
+              </button>
+              <span class="stars stars-4"></span>
               <span class="visually-hidden">Количество звезд гостиницы - 4 звезды из 5.</span>
               <p class="rate">Рейтинг: 8,5</p>
             </li>
             <li class="hotels-item">
               <img class="hotel-image" src="img/hotels/Villas_at_Poco_Diablo.jpg" width="300" height="212" alt="">
-              <a  class="hotel-title" href="#">
-
-                <h3 >Villas at Poco Diablo</h3>
+              <a class="hotel-title" href="#">
+                <h3>Villas at Poco Diablo</h3>
               </a>
               <span class="hotels-type">Гостиница</span>
               <span class="hotels-price">От 5000 ₽</span>
-              <a class="hotels-button " href="#">Подробнее</a>
-              <button class="favorites-button" type="button">в избранном</button>
-              <span class="stars"><img class="img" alt="4 звезды из 5" src="img/stars/4-stars.png"></span>
+              <a class="button button-brown button-small" href="#">Подробнее</a>
+              <button class="button button-green button-small" type="button">
+                в избранном
+              </button>
+              <span class="stars stars-4" ></span>
               <span class="visually-hidden">Количество звезд гостиницы - 4 звезды из 5.</span>
               <p class="rate">Рейтинг: 9,2</p>
+            </li>
+
             <li class="hotels-item">
               <img class="hotel-image" src="img/hotels/Desert_Quail_Inn.jpg" width="300" height="212" alt="">
               <a class="hotel-title" href="#">
-
                 <h3>Desert Quail Inn</h3>
               </a>
               <span class="hotels-type">Гостиница</span>
               <span class="hotels-price">От 2500 ₽</span>
-              <a class="hotels-button " href="#">Подробнее</a>
-              <button class="favorites-button" type="button">в избранное</button>
-              <span class="stars"><img class="img" alt="3 звезды из 5" src="img/stars/3-stars.png"></span>
+              <a class="button button-brown button-small" href="#">Подробнее</a>
+              <button class="button button-blue button-small" type="button">
+                в избранное
+              </button>
+              <span class="stars stars-3"></span>
               <span class="visually-hidden">Количество звезд гостиницы - 3 звезды из 5.</span>
               <p class="rate">Рейтинг: 6,9</p>
             </li>
             <li class="hotels-item">
-              <img class="hotel-image" src="img/hotels/Green_Tree_Inn.jpg" width="300" height="212" alt="">
+              <img class="hotel-image" src="img/hotels/Green_Tree_Inn.jpg" width="300" height="212" alt="" >
               <a class="hotel-title" href="#">
-
-                <h3 >GreenTree Inn</h3>
+                <h3>GreenTree Inn</h3>
               </a>
               <span class="hotels-type">Гостиница</span>
               <span class="hotels-price">От 1500 ₽</span>
-              <a class="hotels-button " href="#">Подробнее</a>
-              <button class="favorites-button" type="button">в избранное</button>
-              <span class="stars"><img class="img" alt="2 звезды из 5" src="img/stars/2-stars.png"></span>
+              <a class="button button-brown button-small" href="#">Подробнее</a>
+              <button class="button button-blue button-small" type="button">
+                в избранное
+              </button>
+              <span class="stars stars-2"></span>
               <span class="visually-hidden">Количество звезд гостиницы - 2 звезды из 5.</span>
               <p class="rate">Рейтинг: 5,0</p>
             </li>
           </ul>
-          <hr class="hotel-divider" />
+          <hr class="hotel-divider" >
           <ul class="pagination">
-
             <li class="pagination-item">
               <a class="pagination-link pagination-current">1</a>
             </li>
@@ -221,7 +232,7 @@
               <a class="pagination-link" href="#">4</a>
             </li>
             <li class="pagination-item">
-              <a class="pagination-link" style="background: none; color: black;" href="#">...</a>
+              <a class="pagination-link" style="background: none; color: black" href="#">...</a>
             </li>
             <li class="pagination-item">
               <a class="pagination-link" href="#">10</a>
@@ -231,37 +242,36 @@
 
         <section class="subscribe-catalog" data-test="subscribe">
           <h3 class="heading">Подпишитесь на рассылку</h3>
-          <p class="descriptions">Только полезная информация и никакого спама,<br> честное бойскаутское!</p>
+          <p class="descriptions">
+            Только полезная информация и никакого спама,<br>
+            честное бойскаутское!
+          </p>
           <form class="subscribe-form" action="https://echo.htmlacademy.ru/" method="post">
             <input class="subscribe-input" type="text" name="mail" id="mail-field" placeholder="Ваш e-mail">
-            <button class="subscribe-button" type="submit">Подписаться</button>
+            <button class="button button-blue button-right" type="submit">
+              Подписаться
+            </button>
           </form>
         </section>
-
       </main>
       <footer class="page-footer" data-test="footer">
         <ul class="footer-social-list">
           <li class="footer-social-item">
             <span class="visually-hidden">Вконтакте</span>
-            <a href="#"><img class="img img-social" src="img/socials_svg/VK.svg" width="24" height="14"
-                alt="ВКонтакте"></a>
+            <a href="#"><img class="img img-social" src="img/socials_svg/VK.svg" width="24" height="14" alt="ВКонтакте"></a>
           </li>
           <li class="footer-social-item">
             <span class="visually-hidden">Telegram</span>
-            <a href="#"><img class="img img-social" src="img/socials_svg/telegram.svg" width="18" height="15"
-                alt="Telegram"></a>
+            <a href="#"><img class="img img-social" src="img/socials_svg/telegram.svg" width="18" height="15" alt="Telegram"></a>
           </li>
           <li class="footer-social-item">
             <span class="visually-hidden">YouTube</span>
-            <a href="#"><img class="img img-social" src="img/socials_svg/youtube.svg" width="22" height="17"
-                alt="YouTube"></a>
+            <a href="#"><img class="img img-social" src="img/socials_svg/youtube.svg" width="22" height="17" alt="YouTube"></a>
           </li>
         </ul>
         <a class="phone" href="tel:+7622620563">+7 (812) 812-12-12</a>
-        <a class="academy" href="https://htmlacademy.ru/"><img class="img img-academy" src="img/HTML_Academy.png" width="115"
-            height="33" alt="HTML Academy"></a>
+        <a class="academy" href="https://htmlacademy.ru/"><img class="img img-academy" src="img/HTML_Academy.png"
+            width="115" height="33" alt="HTML Academy"></a>
       </footer>
     </div>
-  </body>
-
 </html>
