--- a/modal.html
+++ b/modal.html
@@ -29,17 +29,22 @@
         </nav>
         <div class="extra">
           <ul class="extra-icons">
-            <li class="extra-icons-item icon-seach">
-              <a class="icon-link" href="#" title="Поиск">
+            <li class="extra-icons-item">
+              <a class="icon-link icon-link-search" href="#" title="Поиск">
                 <span class="visually-hidden">Поиск</span>
+                <svg xmlns="http://www.w3.org/2000/svg" width="19" height="19" viewBox="0 0 19 19" fill="none">
+                  <path d="M18.8928 17.0083L15.1928 13.3287C16.1928 12.0359 16.8928 10.3453 16.8928 8.4558C16.8928 4.08011 13.2928 0.5 8.89282 0.5C4.49282 0.5 0.892822 4.17956 0.892822 8.55525C0.892822 12.9309 4.49282 16.511 8.89282 16.511C10.6928 16.511 12.3928 15.9144 13.7928 14.8204L17.4928 18.5L18.8928 17.0083ZM8.89282 14.5221C5.59282 14.5221 2.89282 11.837 2.89282 8.55525C2.89282 5.27348 5.59282 2.5884 8.89282 2.5884C12.1928 2.5884 14.8928 5.27348 14.8928 8.55525C14.8928 11.837 12.1928 14.5221 8.89282 14.5221Z" fill="black"/>
+                  </svg>
               </a>
             </li>
-            <li class="extra-icons-item icon-likes">
-              <a class="icon-link" href="#" title="Избранное">
-                <img class="img" src="img/heart.png" width="18" height="17" alt="Избранное">
-                <span class="icon-link-badge">12</span>
+            <li class="extra-icons-item">
+              <a class="icon-link icon-link-likes" href="#" title="Избранное">
                 <span class="visually-hidden">Избранное</span>
+                <svg xmlns="http://www.w3.org/2000/svg" width="19" height="17" viewBox="0 0 19 17" fill="none">
+                  <path d="M9.29282 17C8.99282 17 8.69282 16.9 8.49282 16.6C3.09282 10.5 1.79282 9.1 1.49282 8.7C0.792822 7.8 0.392822 6.6 0.392822 5.4C0.392822 2.4 2.79282 0 5.89282 0C7.19282 0 8.39282 0.5 9.39282 1.3C10.3928 0.5 11.6928 0 12.8928 0C15.8928 0 18.3928 2.4 18.3928 5.4C18.3928 6.7 17.8928 7.9 17.0928 8.8L10.0928 16.7C9.89282 16.9 9.69282 17 9.29282 17ZM3.29282 7.5C3.59282 7.9 6.79282 11.5 9.39282 14.4L15.5928 7.4C16.0928 6.9 16.2928 6.2 16.2928 5.4C16.2928 3.6 14.7928 2.1 12.9928 2.1C11.9928 2.1 10.9928 2.6 10.2928 3.4C9.99282 3.7 9.69282 3.8 9.39282 3.8C9.09282 3.8 8.79282 3.6 8.59282 3.4C7.89282 2.6 6.89282 2.1 5.89282 2.1C4.09282 2.1 2.59282 3.6 2.59282 5.4C2.49282 6.3 2.89282 7 3.29282 7.5C3.19282 7.5 3.19282 7.5 3.29282 7.5Z" fill="black"/>
+                  </svg>
               </a>
+              <span class="icon-link-badge">12</span>
             </li>
           </ul>
           <button class="button button-brown button-small" type="button">Хочу сюда!</button>
@@ -176,7 +181,87 @@
             width="115" height="33" alt="HTML Academy"></a>
       </footer>
 
+      <div class="modal-container">
+        <div class="modal modal-auth">
+          <button class="modal-close-button">
+            <span class="visually-hidden">Закрыть</span>
+          </button>
+          <section class="modal-content">
+            <h2 class="modal-title">Поиск гостиницы в Седоне</h2>
+            <form class="search-form" method="post">
+              <div class="chek-in">
+                <label class="modal-date-field date-check-in">
+                  <span class="modal-label">Дата Заезда:</span>
+                  <input class="modal-input" type="text" id="firstDate" placeholder="Укажите дату"
+                    name="arrive-date" value="27 апреля 2020">
+                  <span class="date-state">Мы не можем отправить вас в прошлое.</span>
+                </label>
+              </div>
+              <div class="chek-out">
+                <label class="modal-date-field date-chek-out">
+                  <span class="modal-label">Дата Выезда:</span>
+                  <input class="modal-input" type="text" value="1 сентября 2023">
+                  <span class="field-hint">На эти даты есть свободные номера. Пока есть.</span>
+                </label>
+              </div>
+              <div class="people-number-wrapper people-adult">
+                <label class="people-amount-field">
+                  <span class="popup-label">Взрослые:</span>
+                  <div class="number-wrapper">
+                    <input class="search-form-field field-people" type="number" name="adults" id="adults" value="2">
+                  <button class="minus">
+                    <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <path d="M3 9V11H17V9H3Z" fill="#756157" fill-opacity="0.3"/>
+                    </svg>
+                  </button>
+                  <button class="plus">
+                    <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <path d="M17 9H11V3H9V9H3V11H9V17H11V11H17V9Z" fill="#756157" fill-opacity="0.3"/>
+                    </svg>
+                  </button>
+                  </div>
+                </label>
+              </div>
+
+              <div class="people-number-field people-child">
+                <span class="popap-label">
+                  <span class="popap-label">Дети:</span>
+                  <span class="tooltip">
+                    <button class="tooltip-toggle" type="button" aria-labelledby="tooltip-label-date">
+                      <svg class="tooltip-icon" width="20" height="20" viewBox="0 0 20 20" fill="none"
+                        xmlns="http://www.w3.org/2000/svg">
+                        <path fill-rule="evenodd" clip-rule="evenodd" d="M9 4H11V6H9V4ZM11 16H9V7H11V16Z"
+                          fill="white" />
+                      </svg>
+                    </button>
+                    <span class="tooltip-text" role="tooltip" id="tooltip-label-date">Укажите количество детей,
+                      которые будут с вами, возраст которых от 6 до 18 лет. Дети до 6 лет размещаются
+                      бесплатно.</span>
+                  </span>
+                </span>
+
+                <div class="number-wrapper">
+                  <input class="search-form-field field-people" type="number" name="children" id="children" value="2">
+                  <button class="minus">
+                    <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <path d="M3 9V11H17V9H3Z" fill="#756157" fill-opacity="0.3"/>
+                    </svg>
+                  </button>
+                  <button class="plus">
+                    <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <path d="M17 9H11V3H9V9H3V11H9V17H11V11H17V9Z" fill="#756157" fill-opacity="0.3"/>
+                    </svg>
+                  </button>
+                </div>
+              </label>
+              <button class="button button-blue button-big" type="submit">Найти</button>
+            </form>
+          </section>
+        </div>
+        </section>
+      </div>
     </div>
+
   </body>
 
 </html>
