--- a/modal.html
+++ b/modal.html
@@ -273,8 +273,7 @@
             src="img/HTML_Academy.png"
             width="115"
             height="33"
-            alt="HTML Academy"
-        /></a>
+            alt="HTML Academy"/></a>
       </footer>
 
       <div class="modal-container">
