--- a/catalog.html
+++ b/catalog.html
@@ -10,7 +10,7 @@
     <div class="container">
       <header class="page-header" data-test="header">
         <a class="logo" href="index.html">
-          <img class="img" src="img/logo-Sedona.svg" width="140" height="70" alt="Логотип города Седона." >
+          <img class="img" src="img/logo-sedona.svg" width="140" height="70" alt="Логотип города Седона." >
         </a>
         <nav class="navigation">
           <ul class="navigation-list">
@@ -158,7 +158,7 @@
         <section class="hotels" data-test="hotels">
           <ul class="hotels-list">
             <li class="hotels-item">
-              <img class="hotel-image" src="img/hotels/Amara_Resort_&_Spa.jpg" width="300" height="212" alt="">
+              <img class="hotel-image" src="img/hotels/amara_resort_&_spa.jpg" width="300" height="212" alt="">
               <a class="hotel-link" href="#">
                 <h3 class="hotel-title">Amara Resort & Spa</h3>
               </a>
@@ -173,7 +173,7 @@
               <p class="rate">Рейтинг: 8,5</p>
             </li>
             <li class="hotels-item">
-              <img class="hotel-image" src="img/hotels/Villas_at_Poco_Diablo.jpg" width="300" height="212" alt="">
+              <img class="hotel-image" src="img/hotels/villas_at_poco_diablo.jpg" width="300" height="212" alt="">
               <a class="hotel-link" href="#">
                 <h3 class="hotel-title">Villas at Poco Diablo</h3>
               </a>
@@ -189,7 +189,7 @@
             </li>
 
             <li class="hotels-item">
-              <img class="hotel-image" src="img/hotels/Desert_Quail_Inn.jpg" width="300" height="212" alt="">
+              <img class="hotel-image" src="img/hotels/desert_quail_inn.jpg" width="300" height="212" alt="">
               <a class="hotel-link" href="#">
                 <h3 class="hotel-title">Desert Quail Inn</h3>
               </a>
@@ -204,7 +204,7 @@
               <p class="rate">Рейтинг: 6,9</p>
             </li>
             <li class="hotels-item">
-              <img class="hotel-image" src="img/hotels/Green_Tree_Inn.jpg" width="300" height="212" alt="" >
+              <img class="hotel-image" src="img/hotels/green_tree_inn.jpg" width="300" height="212" alt="" >
               <a class="hotel-link" href="#">
                 <h3 class="hotel-title">GreenTree Inn</h3>
               </a>
@@ -222,7 +222,7 @@
           <hr class="hotel-divider" >
           <ul class="pagination">
             <li class="pagination-item">
-              <a class="pagination-link pagination-current">1</a>
+              <a class="pagination-link pagination-current" href="#">1</a>
             </li>
             <li class="pagination-item">
               <a class="pagination-link" href="#">2</a>
@@ -234,7 +234,7 @@
               <a class="pagination-link" href="#">4</a>
             </li>
             <li class="pagination-item">
-              <a class="pagination-link" style="background: none; color: black" href="#">...</a>
+              <a class="pagination-link" href="#">...</a>
             </li>
             <li class="pagination-item">
               <a class="pagination-link" href="#">10</a>
