--- a/modal.html
+++ b/modal.html
@@ -10,7 +10,7 @@
     <div class="container">
       <header class="page-header" data-test="header">
         <a class="logo" href="index.html">
-          <img class="img" src="img/logo-Sedona.svg" width="140" height="70" alt="Логотип города Седона.">
+          <img class="img" src="img/logo-sedona.svg" width="140" height="70" alt="Логотип города Седона.">
         </a>
         <nav class="navigation">
           <ul class="navigation-list">
